--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import Navbar from '../components/navbar.astro'
 import Jumbotron from '../components/jumbotron.astro'
-import CardGrid from '../components/cardgrid.astro'
+import GTimeline from '../components/gtimeline.astro'
 import Footer from '../components/footer.astro'
 import config from '../config'
 ---
@@ -11,7 +11,7 @@ import config from '../config'
   <Navbar />
   <main class="bg-white dark:bg-gray-900">
     <Jumbotron />
-    <CardGrid />
+    <GTimeline />
   </main>
   <Footer />
 </Layout>
