--- a/src/components/gtimeline.astro
+++ b/src/components/gtimeline.astro
@@ -1,238 +1,31 @@
 ---
-
+import { getCollection } from 'astro:content'
+const meetings = await getCollection('blog')
 ---
 
-<div
-  class="mb-4 rounded-lg border border-gray-100 bg-gray-50 p-5 dark:border-gray-700 dark:bg-gray-800"
->
-  <time class="text-lg font-semibold text-gray-900 dark:text-white">January 13th, 2022</time>
-  <ol class="divider-gray-200 mt-3 divide-y dark:divide-gray-700">
-    <li>
-      <a href="#" class="block items-center p-3 hover:bg-gray-100 dark:hover:bg-gray-700 sm:flex">
-        <img
-          class="mb-3 me-3 h-12 w-12 rounded-full sm:mb-0"
-          src="/docs/images/people/profile-picture-1.jpg"
-          alt="Jese Leos image"
-        />
-        <div class="text-gray-600 dark:text-gray-400">
-          <div class="text-base font-normal">
-            <span class="font-medium text-gray-900 dark:text-white">Jese Leos</span> likes <span
-              class="font-medium text-gray-900 dark:text-white">Bonnie Green's</span
-            > post in <span class="font-medium text-gray-900 dark:text-white">
-              How to start with Flowbite library</span
-            >
-          </div>
-          <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
-          <span
-            class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400"
-          >
-            <svg
-              class="me-1 h-2.5 w-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="M10 .5a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19ZM8.374 17.4a7.6 7.6 0 0 1-5.9-7.4c0-.83.137-1.655.406-2.441l.239.019a3.887 3.887 0 0 1 2.082 2.5 4.1 4.1 0 0 0 2.441 2.8c1.148.522 1.389 2.007.732 4.522Zm3.6-8.829a.997.997 0 0 0-.027-.225 5.456 5.456 0 0 0-2.811-3.662c-.832-.527-1.347-.854-1.486-1.89a7.584 7.584 0 0 1 8.364 2.47c-1.387.208-2.14 2.237-2.14 3.307a1.187 1.187 0 0 1-1.9 0Zm1.626 8.053-.671-2.013a1.9 1.9 0 0 1 1.771-1.757l2.032.619a7.553 7.553 0 0 1-3.132 3.151Z"
-              ></path>
+
+<ol class="mx-auto max-w-screen-xl relative border-s border-gray-200 dark:border-gray-700">  
+  {meetings.map((meeting, i) => (
+    <li class="mb-10 ms-6">            
+        <span class="absolute flex items-center justify-center w-6 h-6 bg-yellow-400 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-yellow-900">
+            <svg class="w-2.5 h-2.5 text-yellow-800 dark:text-yellow-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
             </svg>
-            Public
-          </span>
-        </div>
-      </a>
+        </span>
+        <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">
+          {meeting.data.title}
+          {i == 0 &&
+            <span class="bg-yellow-100 text-yellow-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300 ms-3">Latest</span>
+          }
+          </h3>
+        <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{meeting.data.pubDate}</time>
+        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{meeting.data.description}</p>
+        <a href="#" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-yellow-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-yellow-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
+    <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
+  </svg> Read More</a>
     </li>
-    <li>
-      <a href="#" class="block items-center p-3 hover:bg-gray-100 dark:hover:bg-gray-700 sm:flex">
-        <img
-          class="mb-3 me-3 h-12 w-12 rounded-full sm:mb-0"
-          src="/docs/images/people/profile-picture-3.jpg"
-          alt="Bonnie Green image"
-        />
-        <div>
-          <div class="text-base font-normal text-gray-600 dark:text-gray-400">
-            <span class="font-medium text-gray-900 dark:text-white">Bonnie Green</span> react to <span
-              class="font-medium text-gray-900 dark:text-white">Thomas Lean's</span
-            > comment
-          </div>
-          <span
-            class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400"
-          >
-            <svg
-              class="me-1 h-2.5 w-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="m2 13.587 3.055-3.055A4.913 4.913 0 0 1 5 10a5.006 5.006 0 0 1 5-5c.178.008.356.026.532.054l1.744-1.744A8.973 8.973 0 0 0 10 3C4.612 3 0 8.336 0 10a6.49 6.49 0 0 0 2 3.587Z"
-              ></path>
-              <path
-                d="m12.7 8.714 6.007-6.007a1 1 0 1 0-1.414-1.414L11.286 7.3a2.98 2.98 0 0 0-.588-.21l-.035-.01a2.981 2.981 0 0 0-3.584 3.583c0 .012.008.022.01.033.05.204.12.401.211.59l-6.007 6.007a1 1 0 1 0 1.414 1.414L8.714 12.7c.189.091.386.162.59.211.011 0 .021.007.033.01a2.981 2.981 0 0 0 3.584-3.584c0-.012-.008-.023-.011-.035a3.05 3.05 0 0 0-.21-.588Z"
-              ></path>
-              <path
-                d="M17.821 6.593 14.964 9.45a4.952 4.952 0 0 1-5.514 5.514L7.665 16.75c.767.165 1.55.25 2.335.251 6.453 0 10-5.258 10-7 0-1.166-1.637-2.874-2.179-3.407Z"
-              ></path>
-            </svg>
-            Private
-          </span>
-        </div>
-      </a>
-    </li>
-  </ol>
-</div>
-<div class="rounded-lg border border-gray-100 bg-gray-50 p-5 dark:border-gray-700 dark:bg-gray-800">
-  <time class="text-lg font-semibold text-gray-900 dark:text-white">January 12th, 2022</time>
-  <ol class="divider-gray-200 mt-3 divide-y dark:divide-gray-700">
-    <li>
-      <a href="#" class="block items-center p-3 hover:bg-gray-100 dark:hover:bg-gray-700 sm:flex">
-        <img
-          class="mb-3 me-3 h-12 w-12 rounded-full sm:mb-0"
-          src="/docs/images/people/profile-picture-4.jpg"
-          alt="Laura Romeros image"
-        />
-        <div class="text-gray-600 dark:text-gray-400">
-          <div class="text-base font-normal">
-            <span class="font-medium text-gray-900 dark:text-white">Laura Romeros</span> likes <span
-              class="font-medium text-gray-900 dark:text-white">Bonnie Green's</span
-            > post in <span class="font-medium text-gray-900 dark:text-white">
-              How to start with Flowbite library</span
-            >
-          </div>
-          <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
-          <span
-            class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400"
-          >
-            <svg
-              class="me-1 h-2.5 w-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="m2 13.587 3.055-3.055A4.913 4.913 0 0 1 5 10a5.006 5.006 0 0 1 5-5c.178.008.356.026.532.054l1.744-1.744A8.973 8.973 0 0 0 10 3C4.612 3 0 8.336 0 10a6.49 6.49 0 0 0 2 3.587Z"
-              ></path>
-              <path
-                d="m12.7 8.714 6.007-6.007a1 1 0 1 0-1.414-1.414L11.286 7.3a2.98 2.98 0 0 0-.588-.21l-.035-.01a2.981 2.981 0 0 0-3.584 3.583c0 .012.008.022.01.033.05.204.12.401.211.59l-6.007 6.007a1 1 0 1 0 1.414 1.414L8.714 12.7c.189.091.386.162.59.211.011 0 .021.007.033.01a2.981 2.981 0 0 0 3.584-3.584c0-.012-.008-.023-.011-.035a3.05 3.05 0 0 0-.21-.588Z"
-              ></path>
-              <path
-                d="M17.821 6.593 14.964 9.45a4.952 4.952 0 0 1-5.514 5.514L7.665 16.75c.767.165 1.55.25 2.335.251 6.453 0 10-5.258 10-7 0-1.166-1.637-2.874-2.179-3.407Z"
-              ></path>
-            </svg>
-            Private
-          </span>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="block items-center p-3 hover:bg-gray-100 dark:hover:bg-gray-700 sm:flex">
-        <img
-          class="mb-3 me-3 h-12 w-12 rounded-full sm:mb-0"
-          src="/docs/images/people/profile-picture-2.jpg"
-          alt="Mike Willi image"
-        />
-        <div>
-          <div class="text-base font-normal text-gray-600 dark:text-gray-400">
-            <span class="font-medium text-gray-900 dark:text-white">Mike Willi</span> react to <span
-              class="font-medium text-gray-900 dark:text-white">Thomas Lean's</span
-            > comment
-          </div>
-          <span
-            class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400"
-          >
-            <svg
-              class="me-1 h-2.5 w-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="M10 .5a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19ZM8.374 17.4a7.6 7.6 0 0 1-5.9-7.4c0-.83.137-1.655.406-2.441l.239.019a3.887 3.887 0 0 1 2.082 2.5 4.1 4.1 0 0 0 2.441 2.8c1.148.522 1.389 2.007.732 4.522Zm3.6-8.829a.997.997 0 0 0-.027-.225 5.456 5.456 0 0 0-2.811-3.662c-.832-.527-1.347-.854-1.486-1.89a7.584 7.584 0 0 1 8.364 2.47c-1.387.208-2.14 2.237-2.14 3.307a1.187 1.187 0 0 1-1.9 0Zm1.626 8.053-.671-2.013a1.9 1.9 0 0 1 1.771-1.757l2.032.619a7.553 7.553 0 0 1-3.132 3.151Z"
-              ></path>
-            </svg>
-            Public
-          </span>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="block items-center p-3 hover:bg-gray-100 dark:hover:bg-gray-700 sm:flex">
-        <img
-          class="mb-3 me-3 h-12 w-12 rounded-full sm:mb-0"
-          src="/docs/images/people/profile-picture-5.jpg"
-          alt="Jese Leos image"
-        />
-        <div class="text-gray-600 dark:text-gray-400">
-          <div class="text-base font-normal">
-            <span class="font-medium text-gray-900 dark:text-white">Jese Leos</span> likes <span
-              class="font-medium text-gray-900 dark:text-white">Bonnie Green's</span
-            > post in <span class="font-medium text-gray-900 dark:text-white">
-              How to start with Flowbite library</span
-            >
-          </div>
-          <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
-          <span
-            class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400"
-          >
-            <svg
-              class="me-1 h-2.5 w-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="M10 .5a9.5 9.5 0 1 0 0 19 9.5 9.5 0 0 0 0-19ZM8.374 17.4a7.6 7.6 0 0 1-5.9-7.4c0-.83.137-1.655.406-2.441l.239.019a3.887 3.887 0 0 1 2.082 2.5 4.1 4.1 0 0 0 2.441 2.8c1.148.522 1.389 2.007.732 4.522Zm3.6-8.829a.997.997 0 0 0-.027-.225 5.456 5.456 0 0 0-2.811-3.662c-.832-.527-1.347-.854-1.486-1.89a7.584 7.584 0 0 1 8.364 2.47c-1.387.208-2.14 2.237-2.14 3.307a1.187 1.187 0 0 1-1.9 0Zm1.626 8.053-.671-2.013a1.9 1.9 0 0 1 1.771-1.757l2.032.619a7.553 7.553 0 0 1-3.132 3.151Z"
-              ></path>
-            </svg>
-            Public
-          </span>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="block items-center p-3 hover:bg-gray-100 dark:hover:bg-gray-700 sm:flex">
-        <img
-          class="mb-3 me-3 h-12 w-12 rounded-full sm:mb-0"
-          src="/docs/images/people/profile-picture-3.jpg"
-          alt="Bonnie Green image"
-        />
-        <div class="text-gray-600 dark:text-gray-400">
-          <div class="text-base font-normal">
-            <span class="font-medium text-gray-900 dark:text-white">Bonnie Green</span> likes <span
-              class="font-medium text-gray-900 dark:text-white">Bonnie Green's</span
-            > post in <span class="font-medium text-gray-900 dark:text-white">
-              Top figma designs</span
-            >
-          </div>
-          <div class="text-sm font-normal">"I wanted to share a webinar zeroheight."</div>
-          <span
-            class="inline-flex items-center text-xs font-normal text-gray-500 dark:text-gray-400"
-          >
-            <svg
-              class="me-1 h-2.5 w-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="m2 13.587 3.055-3.055A4.913 4.913 0 0 1 5 10a5.006 5.006 0 0 1 5-5c.178.008.356.026.532.054l1.744-1.744A8.973 8.973 0 0 0 10 3C4.612 3 0 8.336 0 10a6.49 6.49 0 0 0 2 3.587Z"
-              ></path>
-              <path
-                d="m12.7 8.714 6.007-6.007a1 1 0 1 0-1.414-1.414L11.286 7.3a2.98 2.98 0 0 0-.588-.21l-.035-.01a2.981 2.981 0 0 0-3.584 3.583c0 .012.008.022.01.033.05.204.12.401.211.59l-6.007 6.007a1 1 0 1 0 1.414 1.414L8.714 12.7c.189.091.386.162.59.211.011 0 .021.007.033.01a2.981 2.981 0 0 0 3.584-3.584c0-.012-.008-.023-.011-.035a3.05 3.05 0 0 0-.21-.588Z"
-              ></path>
-              <path
-                d="M17.821 6.593 14.964 9.45a4.952 4.952 0 0 1-5.514 5.514L7.665 16.75c.767.165 1.55.25 2.335.251 6.453 0 10-5.258 10-7 0-1.166-1.637-2.874-2.179-3.407Z"
-              ></path>
-            </svg>
-            Private
-          </span>
-        </div>
-      </a>
-    </li>
-  </ol>
-</div>
+
+  ))}               
+</ol>
+
