--- a/src/components/jumbotron.astro
+++ b/src/components/jumbotron.astro
@@ -1,46 +1,24 @@
 ---
-import config from '../config'
+import { Image } from 'astro:assets'
+import heroimage from '../media/retirementahead.jpg'
 ---
-
 <section class="bg-white dark:bg-gray-900">
-  <div class="mx-auto max-w-screen-xl px-4 py-8 text-center lg:py-16">
-    <h1
-      class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 dark:text-white md:text-5xl lg:text-6xl"
-    >
-      {config.site_name}
-    </h1>
-    <p
-      class="mb-8 text-lg font-normal text-gray-500 dark:text-gray-400 sm:px-16 lg:px-48 lg:text-xl"
-    >
-      {config.site_desc}
-    </p>
-    <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-      <a
-        href="#"
-        class="inline-flex items-center justify-center rounded-lg bg-blue-700 px-5 py-3 text-center text-base font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900"
-      >
-        Get started
-        <svg
-          class="ms-2 h-3.5 w-3.5 rtl:rotate-180"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 14 10"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-        </svg>
-      </a>
-      <a
-        href="#"
-        class="dark:hover:bg-gray-70 rounded-lg border border-gray-200 bg-white px-5 py-3 text-sm font-medium text-gray-900 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:outline-none focus:ring-4 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:text-white dark:focus:ring-gray-700 sm:ms-4"
-      >
-        Learn more
-      </a>
-    </div>
+  <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+      <div class="mr-auto place-self-center lg:col-span-7">
+          <h1 class="max-w-2xl text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Australian Independent Retirees (AIR)</h1>
+          <h2 class="max-w-2xl mb-4 text-2xl font-extrabold tracking-tight leading-none md:text-3xl xl:text-4xl dark:text-white">Sydney Hills Branch</h2>
+          <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">We regularly have a variety of interesting speakers/topics for our members and visitors. We hold 2 meetings on the 1st Friday of every month from February 2024 at the Beecroft Presbyterian Church Hall at 6a Welham St, Beecroft commencing at 10:45am. </p>
+          <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">The first meeting covers a range of topics including Health, Aged Care, Travel, Technology, Retirement services, etc. After some refreshments, our second meeting at 12:30pm covers financial and investment topics including Superannuation, Retirement income, Investment Markets, Financial Trends, etc. If you are retired or approaching retirement, come along, meet new friends and receive about useful information to help your retirement. </p>
+          <a href="http://independentretirees.com" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-yellow-500 hover:bg-yellow-600 focus:ring-4 focus:ring-yellow-300 dark:focus:ring-primary-900">
+              AIR National website 
+              <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </a>
+          <a href="https://www.facebook.com/independentretirees" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+              Facebook page
+          </a> 
+      </div>
+      <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+          <Image src={heroimage} alt="Retirement Ahead" />
+      </div>                
   </div>
 </section>
