--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,9 +13,9 @@ const { title } = Astro.props
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.ico`} sizes="any" />
-    <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.svg`} type="image/svg+xml" />
+    <link rel="icon" href={`${import.meta.env.BASE_URL}favicon.png`} type="image/svg+xml" />
     <link rel="apple-touch-icon" href={`${import.meta.env.BASE_URL}apple-touch-icon.png`} />
-    <link rel="manifest" href={`${import.meta.env.BASE_URL}site.webmanifest`} />
+    <!-- <link rel="manifest" href={`${import.meta.env.BASE_URL}site.webmanifest`} /> -->
     <link rel="sitemap" href={`${import.meta.env.BASE_URL}sitemap-index.xml`} />
     <link
       rel="alternate"
