--- a/src/components/cardgrid.astro
+++ b/src/components/cardgrid.astro
@@ -1,11 +1,11 @@
 ---
 import { getCollection } from 'astro:content'
 import Card from './card.astro'
-const blogEntries = await getCollection('blog')
+const meetings = await getCollection('meetings')
 ---
 
 <div class="mx-auto max-w-screen-xl px-4 py-8 lg:py-16">
   <div class="grid gap-8 md:grid-cols-2">
-    {blogEntries.map((blog) => <Card card={blog} />)}
+    {meetings.map((meeting) => <Card {meeting} />)}
   </div>
 </div>
