--- a/src/components/gtimeline.astro
+++ b/src/components/gtimeline.astro
@@ -1,31 +1,60 @@
 ---
 import { getCollection } from 'astro:content'
-const meetings = await getCollection('blog')
+const allMeetings = await getCollection('meetings')
+const meetings = allMeetings.sort((a,b) => ((a.data.pubDate && b.data.pubDate) ? +b.data.pubDate - +a.data.pubDate : 0))
 ---
 
-
-<ol class="mx-auto max-w-screen-xl relative border-s border-gray-200 dark:border-gray-700">  
-  {meetings.map((meeting, i) => (
-    <li class="mb-10 ms-6">            
-        <span class="absolute flex items-center justify-center w-6 h-6 bg-yellow-400 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-yellow-900">
-            <svg class="w-2.5 h-2.5 text-yellow-800 dark:text-yellow-600" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-            </svg>
+<ol class="relative mx-auto max-w-screen-xl border-s border-gray-200 dark:border-gray-700">
+  {
+    meetings.map((meeting, i) => (
+      <li class="mb-10 ms-6">
+        <span class="absolute -start-3 flex h-6 w-6 items-center justify-center rounded-full bg-yellow-400 ring-8 ring-white dark:bg-yellow-900 dark:ring-gray-900">
+          <svg
+            class="h-2.5 w-2.5 text-yellow-800 dark:text-yellow-600"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+          >
+            <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+          </svg>
         </span>
-        <h3 class="flex items-center mb-1 text-lg font-semibold text-gray-900 dark:text-white">
+        <h3 class="mb-1 flex items-center text-lg font-semibold text-gray-900 dark:text-white">
           {meeting.data.title}
-          {i == 0 &&
-            <span class="bg-yellow-100 text-yellow-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300 ms-3">Latest</span>
-          }
-          </h3>
-        <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">{meeting.data.pubDate}</time>
-        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">{meeting.data.description}</p>
-        <a href="#" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-yellow-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-yellow-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-    <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
-    <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
-  </svg> Read More</a>
-    </li>
-
-  ))}               
+          {i == 0 && (
+            <span class="me-2 ms-3 rounded bg-yellow-100 px-2.5 py-0.5 text-sm font-medium text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300">
+              Latest
+            </span>
+          )}
+          {meeting.data.pubDate && (meeting.data.pubDate > new Date()) && (
+            <span class="me-2 ms-3 rounded bg-yellow-300 px-2.5 py-0.5 text-sm font-medium text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300">
+              Upcoming
+            </span>
+          )}
+        </h3>
+        <time class="mb-2 block text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+          {meeting.data.pubDate}
+        </time>
+        <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+          {meeting.data.description}
+        </p>
+        <a
+          href={`${import.meta.env.BASE_URL}meeting/${meeting.slug}`}
+          class="inline-flex items-center rounded-lg border border-gray-200 bg-white px-4 py-2 text-sm font-medium text-gray-900 hover:bg-gray-100 hover:text-yellow-700 focus:z-10 focus:text-yellow-700 focus:outline-none focus:ring-4 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-gray-700"
+        >
+          <svg
+            class="me-2.5 h-3.5 w-3.5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+          >
+            <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z" />
+            <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z" />
+          </svg>{' '}
+          Read More
+        </a>
+      </li>
+    ))
+  }
 </ol>
-
