--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,13 +1,13 @@
 ---
 import { Image } from 'astro:assets'
 import config from '../config'
-import logo from '../media/logo.png'
+import logo from '../assets/logo-wide.jpg'
 ---
 
 <nav class="border-gray-200 bg-white dark:bg-gray-900">
   <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <Image src={logo} alt="Logo" height={50} />
+      <Image src={logo} alt="Logo" height={64} />
       <span class="self-center whitespace-nowrap text-2xl font-semibold dark:text-white"
         >{config.site_name}</span
       >
@@ -39,22 +39,25 @@ import logo from '../media/logo.png'
       <ul
         class="mt-4 flex flex-col rounded-lg border border-gray-100 bg-gray-50 p-4 font-medium dark:border-gray-700 dark:bg-gray-800 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:bg-white md:p-0 md:dark:bg-gray-900 rtl:space-x-reverse"
       >
-        <li>
-          <a
-            href="/"
-            class="block rounded bg-blue-700 px-3 py-2 text-white dark:text-white md:bg-transparent md:p-0 md:text-blue-700 md:dark:text-blue-500"
-            aria-current="page">Home</a
-          >
-        </li>
         {
           config.nav_menu.map((item) => (
             <li>
-              <a
-                href={item.link}
-                class="block rounded px-3 py-2 text-gray-900 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500"
-              >
-                {item.name}
-              </a>
+              {Astro.url.pathname === item.link ? (
+                <a
+                  href={item.link}
+                  class="block rounded bg-blue-700 px-3 py-2 text-white dark:text-white md:bg-transparent md:p-0 md:text-blue-700 md:dark:text-blue-500"
+                  aria-current="page"
+                >
+                  {item.name}
+                </a>
+              ) : (
+                <a
+                  href={item.link}
+                  class="block rounded px-3 py-2 text-gray-900 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500"
+                >
+                  {item.name}
+                </a>
+              )}
             </li>
           ))
         }
