--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -3,62 +3,20 @@
 ---
 
 <section class="bg-white dark:bg-gray-900">
-  <div
-    class="mx-auto max-w-screen-xl items-center gap-8 px-4 py-8 sm:py-16 md:grid md:grid-cols-2 lg:px-6 xl:gap-16"
-  >
-    <img
-      class="w-full dark:hidden"
-      src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/cta/cta-dashboard-mockup.svg"
-      alt="dashboard image"
-    />
-    <img
-      class="hidden w-full dark:block"
-      src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/cta/cta-dashboard-mockup-dark.svg"
-      alt="dashboard image"
-    />
-    <div class="mt-4 md:mt-0">
-      <h2 class="mb-4 text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white">
-        Let's create more tools and ideas that brings us together.
-      </h2>
-      <p class="mb-6 font-light text-gray-500 dark:text-gray-400 md:text-lg">
-        Flowbite helps you connect with friends and communities of people who share your interests.
-        Connecting with your friends and family as well as discovering new ones is easy with
-        features like Groups.
-      </p>
-      <a
-        href="#"
-        class="inline-flex items-center rounded-lg bg-orange-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-orange-800 focus:ring-4 focus:ring-orange-300 dark:focus:ring-orange-900"
-      >
-        Get started
-        <svg
-          class="-mr-1 ml-2 h-5 w-5"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          ><path
-            fill-rule="evenodd"
-            d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-            clip-rule="evenodd"></path></svg
-        >
-      </a>
-    </div>
-  </div>
-</section>
-<section class="bg-white dark:bg-gray-900">
   <div class="mx-auto max-w-screen-xl px-4 py-8 sm:py-16 lg:px-6">
     <div class="mx-auto max-w-screen-sm text-center">
       <h2
         class="mb-4 text-4xl font-extrabold leading-tight tracking-tight text-gray-900 dark:text-white"
       >
-        Start your free trial today
+        Join AIR today
       </h2>
       <p class="mb-6 font-light text-gray-500 dark:text-gray-400 md:text-lg">
-        Try Flowbite Platform for 30 days. No credit card required.
+        Membership of AIR is open to anyone over 50 who is or planning to be fully or partly self-funded in their retirement.
       </p>
       <a
-        href="#"
-        class="mb-2 mr-2 rounded-lg bg-orange-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-orange-800 focus:outline-none focus:ring-4 focus:ring-orange-300 dark:bg-orange-600 dark:hover:bg-orange-700 dark:focus:ring-orange-800"
-        >Free trial for 30 days</a
+        href="https://www.independentretirees.com/membership/join-air"
+        class="mb-2 mr-2 rounded-lg bg-orange-500 px-5 py-2.5 text-sm font-medium text-white hover:bg-orange-800 focus:outline-none focus:ring-4 focus:ring-orange-300 dark:bg-orange-600 dark:hover:bg-orange-700 dark:focus:ring-orange-800"
+        >Join</a
       >
     </div>
   </div>
