--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import Navbar from '../components/navbar.astro'
 import Jumbotron from '../components/jumbotron.astro'
 import GTimeline from '../components/gtimeline.astro'
+import CTA from '../components/cta.astro'
 import Footer from '../components/footer.astro'
 import config from '../config'
 ---
@@ -13,5 +14,6 @@ import config from '../config'
     <Jumbotron />
     <GTimeline />
   </main>
+  <CTA />
   <Footer />
 </Layout>
