Update date format in timeline

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -11,7 +11,8 @@
         Join AIR today
       </h2>
       <p class="mb-6 font-light text-gray-500 dark:text-gray-400 md:text-lg">
-        Membership of AIR is open to anyone over 50 who is or planning to be fully or partly self-funded in their retirement.
+        Membership of AIR is open to anyone over 50 who is or planning to be fully or partly
+        self-funded in their retirement.
       </p>
       <a
         href="https://www.independentretirees.com/membership/join-air"
