--- a/src/components/gtimeline.astro
+++ b/src/components/gtimeline.astro
@@ -29,7 +29,7 @@ let latest = true
     </div>
     <ol class="relative mx-auto max-w-screen-xl border-s border-gray-200 dark:border-gray-700">
       {
-        meetings.map(meeting => (
+        meetings.map((meeting) => (
           <li class="mb-10 ms-6">
             <span class="absolute -start-3 flex h-6 w-6 items-center justify-center rounded-full bg-orange-300 ring-8 ring-white dark:bg-orange-900 dark:ring-orange-900">
               <svg
@@ -44,11 +44,14 @@ let latest = true
             </span>
             <h3 class="mb-1 flex items-center text-lg font-semibold text-gray-900 dark:text-white">
               {meeting.data.title}
-              {latest && meeting.data.pubDate && meeting.data.pubDate < now && !(latest = false) && (
-                <span class="me-2 ms-3 rounded bg-orange-100 px-2.5 py-0.5 text-sm font-medium text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300">
-                  Latest
-                </span>
-              )}
+              {latest &&
+                meeting.data.pubDate &&
+                meeting.data.pubDate < now &&
+                !(latest = false) && (
+                  <span class="me-2 ms-3 rounded bg-orange-100 px-2.5 py-0.5 text-sm font-medium text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300">
+                    Latest
+                  </span>
+                )}
               {meeting.data.pubDate && meeting.data.pubDate > now && (
                 <span class="me-2 ms-3 rounded bg-orange-300 px-2.5 py-0.5 text-sm font-medium text-yellow-800 dark:bg-yellow-900 dark:text-yellow-300">
                   Upcoming
@@ -56,7 +59,8 @@ let latest = true
               )}
             </h3>
             <time class="mb-2 block text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-              {meeting.data.pubDate}
+              {meeting.data.pubDate &&
+                meeting.data.pubDate.toLocaleString('en-AU', { timeZone: 'Australia/Sydney' })}
             </time>
             <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
               {meeting.data.description}
