--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ const frontmatter = {
       <p class="mb-8 text-center font-light text-gray-500 dark:text-gray-400 sm:text-xl lg:mb-16">
         Please reach out to us via the form below.
       </p>
-      <form name="contact" method="POST" data-netlify=true class="space-y-8">
+      <form name="contact" method="POST" data-netlify="true" class="space-y-8">
         <div>
           <label for="email" class="mb-2 block text-sm font-medium text-gray-900 dark:text-gray-300"
             >Your email</label
