--- a/src/components/jumbotron.astro
+++ b/src/components/jumbotron.astro
@@ -10,7 +10,7 @@ const social = await getCollection('social')
   <div class='grid mx-auto max-w-screen-xl px-4 py-8 lg:grid-cols-12 lg:gap-8 xl:gap-0 lg:py-16'>
     <div class='mr-auto place-self-center lg:col-span-7'>
       <h1
-        class='max-w-2xl text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl text-orange-500'
+        class='max-w-2xl text-4xl text-orange-500 font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl'
       >
         Australian Independent Retirees (AIR)
       </h1>
