--- a/src/pages/categories.astro
+++ b/src/pages/categories.astro
@@ -17,7 +17,11 @@ const categories = await getCollection('category')
 
 <Base frontmatter={frontmatter}>
   <header>
-    <PageHero title={frontmatter.title!} description={frontmatter.description} image={DefaultImage} />
+    <PageHero
+      title={frontmatter.title!}
+      description={frontmatter.description}
+      image={DefaultImage}
+    />
   </header>
   <main class='mt-8 bg-gray-100 dark:bg-gray-900'>
     <div class='mx-auto max-w-7xl px-4 lg:px-8 sm:px-6'>
