Insert netlify redirect script

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const frontmatter: CollectionEntry<'page'>['data'] = {
   image: image
 }
 ---
-
+<script slot='in-head' src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 <Base frontmatter={frontmatter}>
   <main class='bg-white dark:bg-gray-900'>
     <Jumbotron />
@@ -21,4 +21,15 @@ const frontmatter: CollectionEntry<'page'>['data'] = {
   </main>
   <CTA />
   <div class='bg-white p-24 dark:bg-black md:p-12'></div>
+  <script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", (user) => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 </Base>
