Fixed form colour and names

--- a/src/components/gtimeline.astro
+++ b/src/components/gtimeline.astro
@@ -24,7 +24,7 @@ let latest = true
         After some refreshments, our second meeting at 12:30pm covers financial and investment
         topics including Superannuation, Retirement income, Investment Markets, Financial Trends,
         etc. If you are retired or approaching retirement, come along, meet new friends and receive
-        about useful information to help your retirement.
+        useful information to help your retirement.
       </p>
     </div>
     <ol class='relative mx-auto max-w-screen-xl border-s border-gray-200 dark:border-gray-700'>
