--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -68,8 +68,19 @@ const social = await getCollection('social')
             </div>
           </div>
         </div>
-        <form name='contact' method='POST' data-netlify='true' class='mt-8 space-y-8'>
+        <form
+          name='contact'
+          method='POST'
+          data-netlify='true'
+          netlify-honeypot='bot-field'
+          class='mt-8 space-y-8'
+        >
           <div>
+            <p class='hidden'>
+              <label>
+                Don’t fill this out if you’re human: <input name='bot-field' />
+              </label>
+            </p>
             <label
               for='email'
               class='mb-2 block text-sm text-gray-900 font-medium dark:text-gray-300'
@@ -78,7 +89,8 @@ const social = await getCollection('social')
             <input
               type='email'
               id='email'
-              class='focus:ring-primary-500 focus:border-primary-500 dark:shadow-sm-light dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full border border-gray-300 rounded-lg bg-gray-50 p-2.5 text-sm text-gray-900 shadow-sm dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400'
+              name='email'
+              class='dark:shadow-sm-light block w-full border border-gray-300 rounded-lg bg-gray-50 p-2.5 text-sm text-gray-900 shadow-sm dark:border-gray-600 focus:border-orange-500 dark:bg-gray-700 dark:text-white focus:ring-orange-500 dark:focus:border-orange-500 dark:focus:ring-orange-500 dark:placeholder-gray-400'
               placeholder='name@email.com'
               required
             />
@@ -91,7 +103,8 @@ const social = await getCollection('social')
             <input
               type='text'
               id='subject'
-              class='focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 dark:shadow-sm-light block w-full border border-gray-300 rounded-lg bg-gray-50 p-3 text-sm text-gray-900 shadow-sm dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400'
+              name='subject'
+              class='dark:shadow-sm-light block w-full border border-gray-300 rounded-lg bg-gray-50 p-3 text-sm text-gray-900 shadow-sm dark:border-gray-600 focus:border-orange-500 dark:bg-gray-700 dark:text-white focus:ring-orange-500 dark:focus:border-orange-500 dark:focus:ring-orange-500 dark:placeholder-gray-400'
               placeholder='Let us know how we can help you'
               required
             />
@@ -104,13 +117,14 @@ const social = await getCollection('social')
             >
             <textarea
               id='message'
+              name='message'
               rows='6'
-              class='focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full border border-gray-300 rounded-lg bg-gray-50 p-2.5 text-sm text-gray-900 shadow-sm dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400'
+              class='block w-full border border-gray-300 rounded-lg bg-gray-50 p-2.5 text-sm text-gray-900 shadow-sm dark:border-gray-600 focus:border-orange-500 dark:bg-gray-700 dark:text-white focus:ring-orange-500 dark:focus:border-orange-500 dark:focus:ring-orange-500 dark:placeholder-gray-400'
               placeholder='Leave a comment...'></textarea>
           </div>
           <button
             type='submit'
-            class='bg-primary-700 hover:bg-primary-800 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 rounded-lg px-5 py-3 text-center text-sm text-white font-medium sm:w-fit focus:outline-none focus:ring-4'
+            class='rounded-lg bg-orange-700 px-5 py-3 text-center text-sm text-white font-medium sm:w-fit dark:bg-orange-600 hover:bg-orange-800 focus:outline-none focus:ring-4 focus:ring-orange-300 dark:hover:bg-orange-700 dark:focus:ring-orange-800'
             >Send message</button
           >
         </form>
