--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -23,7 +23,7 @@ const social = await getCollection('social')
       >
         © {new Date().getFullYear()}
         <a
-          href='https://hellotham.com'
+          href={Astro.site}
           class='ml-1 text-orange-600 dark:text-orange-500 hover:text-pink-600 dark:hover:text-pink-300'
           rel='noopener noreferrer'
           target='_blank'
@@ -41,28 +41,6 @@ const social = await getCollection('social')
           class='ml-1 text-orange-600 dark:text-orange-500 hover:text-orange-600 dark:hover:text-orange-300'
         >
           Privacy Policy
-        </a>
-      </p>
-      <p class='ml-4 border-l-2 border-orange-500 py-1 pl-4 text-sm text-gray-600'>
-        <a
-          href={import.meta.env.BASE_URL + 'rss.xml'}
-          class='ml-1 text-orange-600 dark:text-orange-500 hover:text-orange-600 dark:hover:text-orange-300'
-          rel='noopener noreferrer'
-          target='_blank'
-        >
-          RSS
-        </a>
-      </p>
-      <p
-        class='ml-4 border-l-2 border-orange-500 py-1 pl-4 text-sm text-gray-600 dark:text-gray-300'
-      >
-        <a
-          href={import.meta.env.BASE_URL + 'sitemap-index.xml'}
-          class='ml-1 text-orange-600 dark:text-orange-500 hover:text-orange-600 dark:hover:text-orange-300'
-          rel='noopener noreferrer'
-          target='_blank'
-        >
-          Sitemap
         </a>
       </p>
     </span>
